--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-navigation": "^1.0.0-beta.21",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "styled-components": "^2.3.0"
   }
 }
